k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wandoor-ingress
  namespace: wandoor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wandoor.local # Ganti dengan domain Anda atau gunakan IP
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
